@@ -5,5 +5,7 @@ this repository contains the full copyright notices and license terms. -->
     <field name="sendcloud" expand="1"/>
     <field name="carrier" expand="1"/>
     <field name="warehouse" expand="1"/>
+    <field name="min_weight" optional="1"/>
+    <field name="max_weight" optional="1"/>
     <field name="shipping_method" expand="2"/>
 </tree>
